--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     
         <script src="asset/theme.js"></script>
     
-<link rel="stylesheet" type="text/css" href="asset/plugins/theme-default/829.index.css"><style data-rh="true">
+<link rel="stylesheet" type="text/css" href="asset/plugins/theme-default/520.index.css"><style data-rh="true">
 :root {
     --ttw-primary-color: #21ba45;
 }
 </style></head>
 <body>
-<div id="root"><div><div class="Loading__loading___1m_fZ"><div class="Loading__bar___21yOt" style="background: rgb(33, 186, 69); width: 0px; display: block;"><div class="Loading__peg___3Y_28"></div></div></div><div class="Loading__spinner___11Pm4"><div class="Loading__icon___3OOyu" style="display: block; border-color: #21ba45;"></div></div></div></div>
+<div id="root"><div><div class="Loading__loading___1m_fZ"><div class="Loading__bar___21yOt" style="background: rgb(33, 186, 69); width: 100%; display: block;"><div class="Loading__peg___3Y_28"></div></div></div><div class="Loading__spinner___11Pm4"><div class="Loading__icon___3OOyu" style="display: none; border-color: #21ba45;"></div></div></div></div>
 <script type="application/payload+json">
 {"book":{"id":"6"},"summary":[{"title":"Available documentation","articles":[{"title":"IDE Integration","ref":"IDE.md","path":"IDE.html","children":[]},{"title":"Docker-compose","ref":"Docker-compose.md","path":"Docker-compose.html","children":[]},{"title":"Images Schema","ref":"Schema.md","path":"Schema.html","children":[]},{"title":"Production image Pipeline","ref":"Pipeline.md","path":"Pipeline.html","children":[]}]}],"config":{"structure":{"summary":"README.md"},"root":"doc"},"file":{"path":"index.html","content":"Alpine-php Doc\n==============\n\nAvailable documentation\n-----------------------\n\n* [IDE Integration](IDE.md)\n* [Docker-compose](Docker-compose.md)\n* [Images Schema](Schema.md)\n* [Production image Pipeline](Pipeline.md)\n","meta":{"mtime":""}},"options":{}}
 </script>
