--- a/Schema.html
+++ b/Schema.html
@@ -12,7 +12,7 @@
 <body>
 <div id="root"></div>
 <script type="application/payload+json">
-{"book":{"id":"10"},"summary":[{"title":"Featured","articles":[{"title":"IDE Integration","ref":"IDE.md","path":"IDE.html","children":[]},{"title":"Docker-compose","ref":"Docker-compose.md","path":"Docker-compose.html","children":[]},{"title":"Images Schema","ref":"Schema.md","path":"Schema.html","children":[]},{"title":"Using Shortcuts and serverless to build a personal Apple Health API","ref":"Pipeline.md","path":"Pipeline.html","children":[]}]}],"config":{"structure":{"summary":"README.md"},"root":"doc","theme":"maxime","plugins":["highlight","tex"]},"file":{"path":"Schema.html","content":"## 7 and 5.6 Schemas\n\n![Tree](https:\/\/raw.githubusercontent.com\/jorge07\/alpine-php\/master\/doc\/images\/tree.jpg)\n","meta":{"mtime":""}},"options":{}}
+{"book":{"id":"10"},"summary":[{"title":"Featured","articles":[{"title":"IDE Integration","ref":"IDE.md","path":"IDE.html","children":[]},{"title":"Docker-compose","ref":"Docker-compose.md","path":"Docker-compose.html","children":[]},{"title":"Images Schema","ref":"Schema.md","path":"Schema.html","children":[]},{"title":"Using Shortcuts and serverless to build a personal Apple Health API","ref":"Pipeline.md","path":"Pipeline.html","children":[]}]}],"config":{"structure":{"summary":"README.md"},"root":"doc","theme":"maxime","plugins":["highlight"]},"file":{"path":"Schema.html","content":"## 7 and 5.6 Schemas\n\n![Tree](https:\/\/raw.githubusercontent.com\/jorge07\/alpine-php\/master\/doc\/images\/tree.jpg)\n","meta":{"mtime":""}},"options":{}}
 </script>
 
 <script src="https://jsdelivr.topthink.com/npm/lodash@4.17/lodash.min.js"></script>
@@ -24,8 +24,6 @@
 <script src="asset/index.js"></script>
 
 <script src="asset/plugins/highlight/index.js"></script>
-
-<script src="asset/plugins/tex/index.js"></script>
 
 <script type="text/javascript">
     TopWrite.bootstrap();
