--- a/IDE.html
+++ b/IDE.html
@@ -12,7 +12,7 @@
 <body>
 <div id="root"></div>
 <script type="application/payload+json">
-{"book":{"id":"10"},"summary":[{"title":"Featured","articles":[{"title":"IDE Integration","ref":"IDE.md","path":"IDE.html","children":[]},{"title":"Docker-compose","ref":"Docker-compose.md","path":"Docker-compose.html","children":[]},{"title":"Images Schema","ref":"Schema.md","path":"Schema.html","children":[]},{"title":"Using Shortcuts and serverless to build a personal Apple Health API","ref":"Pipeline.md","path":"Pipeline.html","children":[]}]}],"config":{"structure":{"summary":"README.md"},"root":"doc","theme":"maxime","plugins":["highlight","tex"]},"file":{"path":"IDE.html","content":"503: Layer already exists1111\n8aafd120b5f1: Layer already exists\n2be2abcbc4f8: Layer already exists\n76505e8b6cba: Layer already exists\na2dd23c6bbbc: Layer already exists\n\n# fe\n\n## fefefef\n\nfefefefe503: Layer already exists\n\n8aafd120b5f1: Layer already exists\n\n2be2abcbc4f8: Layer already exists\n\n76505e8b6cba: Layer already exists\n\na2dd23c6bbbc: Layer already exists\n503: Layer already exists\n8aafd120b5f1: Layer already exists\n2be2abcbc4f8: Layer already exists\n76505e8b6cba: Layer already exists\na2dd23c6bbbc: Layer already exists\n","meta":{"mtime":""}},"options":{}}
+{"book":{"id":"10"},"summary":[{"title":"Featured","articles":[{"title":"IDE Integration","ref":"IDE.md","path":"IDE.html","children":[]},{"title":"Docker-compose","ref":"Docker-compose.md","path":"Docker-compose.html","children":[]},{"title":"Images Schema","ref":"Schema.md","path":"Schema.html","children":[]},{"title":"Using Shortcuts and serverless to build a personal Apple Health API","ref":"Pipeline.md","path":"Pipeline.html","children":[]}]}],"config":{"structure":{"summary":"README.md"},"root":"doc","theme":"maxime","plugins":["highlight"]},"file":{"path":"IDE.html","content":"503: Layer already exists1111\n8aafd120b5f1: Layer already exists\n2be2abcbc4f8: Layer already exists\n76505e8b6cba: Layer already exists\na2dd23c6bbbc: Layer already exists\n\n# fe\n\n## fefefef\n\nfefefefe503: Layer already exists\n\n8aafd120b5f1: Layer already exists\n\n2be2abcbc4f8: Layer already exists\n\n76505e8b6cba: Layer already exists\n\na2dd23c6bbbc: Layer already exists\n503: Layer already exists\n8aafd120b5f1: Layer already exists\n2be2abcbc4f8: Layer already exists\n76505e8b6cba: Layer already exists\na2dd23c6bbbc: Layer already exists\n","meta":{"mtime":""}},"options":{}}
 </script>
 
 <script src="https://jsdelivr.topthink.com/npm/lodash@4.17/lodash.min.js"></script>
@@ -24,8 +24,6 @@
 <script src="asset/index.js"></script>
 
 <script src="asset/plugins/highlight/index.js"></script>
-
-<script src="asset/plugins/tex/index.js"></script>
 
 <script type="text/javascript">
     TopWrite.bootstrap();
