--- a/geee.html
+++ b/geee.html
@@ -12,7 +12,7 @@
 <body>
 <div id="root"></div>
 <script type="application/payload+json">
-{"id":"0Wdw5E","summary":[{"title":"Featured","articles":[{"title":"IDE Integration","ref":"IDE.md","path":"IDE.html","children":[]},{"title":"Docker-compose","ref":"Docker-compose.md","path":"Docker-compose.html","children":[]},{"title":"Images Schema","ref":"Schema.md","path":"Schema.html","children":[{"title":"Using Shortcuts and serverless to build a personal Apple Health API","ref":"Pipeline.md","path":"Pipeline.html","children":[]}]}]},{"title":"feef","articles":[{"title":"xxx","ref":"xxx.md","path":"xxx.html","children":[]}]},{"title":"xxx","articles":[{"title":"geee","ref":"geee.md","path":"geee.html","children":[]}]}],"config":{"structure":{"summary":"README.md"},"theme":"classic","plugins":["highlight","lunrjs"],"pluginsConfig":{"upyun":{"bucket":"topwrite-test","username":"webpack","password":"@encrypted:U2FsdGVkX1\/VM\/XVKWj3EwboAAjS850WhPC7G9GXzLHUeMf7IExBGubwdh9lNIO7AswI8dKr0IcVLFaliJOHSA=="}},"root":"doc"},"file":{"path":"geee.html","content":"","meta":{"mtime":""}},"options":{}}
+{"id":"6rqjd5","summary":[{"title":"Featured","articles":[{"title":"IDE Integration","ref":"IDE.md","path":"IDE.html","children":[]},{"title":"Docker-compose","ref":"Docker-compose.md","path":"Docker-compose.html","children":[]},{"title":"Images Schema","ref":"Schema.md","path":"Schema.html","children":[{"title":"Using Shortcuts and serverless to build a personal Apple Health API","ref":"Pipeline.md","path":"Pipeline.html","children":[]}]}]},{"title":"feef","articles":[{"title":"xxx","ref":"xxx.md","path":"xxx.html","children":[]}]},{"title":"xxx","articles":[{"title":"geee","ref":"geee.md","path":"geee.html","children":[]}]}],"config":{"structure":{"summary":"README.md"},"theme":"classic","plugins":["highlight","lunrjs","upyun"],"pluginsConfig":{"upyun":{"bucket":"topwrite-test","username":"test","password":"@encrypted:U2FsdGVkX1+Y7gICCrxSiGPfT+PJSNRyTAzmemNRvw0z4PPtKngGv9OPM67XUYE8HJQovUCKJEuSoajaMiVF2Q==","path":"abd"}},"root":"doc"},"file":{"path":"geee.html","content":"","meta":{"mtime":""}},"options":{}}
 </script>
 
     <script src="https://jsdelivr.topthink.com/npm/lodash@4.17/lodash.min.js"></script>
@@ -21,13 +21,13 @@
 
     <script src="https://jsdelivr.topthink.com/npm/react-dom@17/umd/react-dom.production.min.js"></script>
 
-    <script src="asset/index.js"></script>
+    <script src="asset/index.js?v=1.0.14"></script>
 
-    <script src="asset/plugins/highlight/index.js"></script>
+    <script src="asset/plugins/highlight/index.js?v=1.0.0"></script>
 
-    <script src="asset/plugins/lunrjs/index.js"></script>
+    <script src="asset/plugins/lunrjs/index.js?v=1.0.1"></script>
 
-    <script src="asset/plugins/theme-classic/index.js"></script>
+    <script src="asset/plugins/theme-classic/index.js?v=1.0.0"></script>
 
 <script type="text/javascript">
     TopWrite.bootstrap();
